# binaryen.ml

./: binaryen.opam  dune-workspace  esy.json  package.json
.github/workflows/: esy.yml  opam-publish.yml  opam.yml
esy.lock/: index.json
src/: dune
test/: dune
