(data_only_dirs binaryen)

(rule
 (deps
  (source_tree binaryen))
 (targets libbinaryen.a)
 (action
  (no-infer
   (progn
    (chdir
     binaryen
     (progn
      (run cmake -D BUILD_STATIC_LIB=ON -D CMAKE_C_COMPILER_WORKS=1 -D
        CMAKE_CXX_COMPILER_WORKS=1 .)
      (run cmake --build .)))
    (copy binaryen/lib/libbinaryen.a libbinaryen.a)))))

(rule
 (deps libbinaryen.a)
 (targets dllbinaryen.so)
 (action
  (no-infer
   (progn
    (chdir
     binaryen/lib
     (run %{cc} -shared -o dllbinaryen.so libbinaryen.a -lstdc++))
    (copy binaryen/lib/dllbinaryen.so dllbinaryen.so)))))

(rule
 (deps libbinaryen.a)
 (targets dllbinaryen.dll)
 (action
  (no-infer
   (progn
    (chdir
     binaryen/lib
     (run %{cc} -shared -o dllbinaryen.dll libbinaryen.a -lstdc++))
    (copy binaryen/lib/dllbinaryen.dll dllbinaryen.dll)))))

(library
 (name binaryen_native)
 (public_name binaryen.native)
 (implements binaryen)
 (foreign_stubs
  (language c)
  (names binaryen_stubs_types binaryen_stubs_ops binaryen_stubs_literals
    binaryen_stubs_expressions binaryen_stubs_functions
    binaryen_stubs_imports binaryen_stubs_exports binaryen_stubs_globals
    binaryen_stubs_function_tables binaryen_stubs_memory
    binaryen_stubs_features binaryen_stubs_modules ocaml_helpers)
  (include_dirs binaryen/src)
  (flags -O2 -Wall -Wextra))
 (foreign_archives binaryen)
 (c_library_flags -lstdc++ -lpthread))
